# homomorphic-encryption

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  Jenkinsfile  README.md  Rakefile.rb  development.compose.yml  stackfile-production.yaml  stackfile.yaml  tasks.py
backend/: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Gopkg.toml  Makefile  README.md  Rakefile.rb  glide.yaml  handlers.go  main.go  requirements.txt  router.go  start_backend.py  start_backend.sh  tasks.py  template.yml
backend/HomomorphicEncryptionBackend/: HomomorphicEncryptionBackend.py
backend/HomomorphicEncryptionBackend/Controller/: ComputationController.py
backend/HomomorphicEncryptionBackend/Encoder/: JsonEncoder.py
backend/HomomorphicEncryptionBackend/Encryption/: Computer.py  ElGamalECC.py  PaillerEncryption.py
backend/HomomorphicEncryptionBackend/Manager/: LogManager.py  SocketManager.py
backend/appengine/: app.go  app.yaml
backend/calculator/: calculator.go  calculator_test.go
backend/controllers/: computation-controller.go  computation.go  compute-controller.go  controller.go  ws-computation-controller.go
backend/errors/: MissingEncryptionScheme.go
backend/messages/: ws-compute.go
backend/models/: computation-model.go  computation.go
backend/providers/: computation-provider.go
backend/scripts/: build.sh  install-deps.sh  test-unit.sh
backend/services/: calculator.go  calculator_test.go
backend/src/: main.rs
backend/tests/: requirements.txt
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  home.rs  main.rs  util.rs
(+280 files in other folders)
